--- a/my-resume-builder/package.json
+++ b/my-resume-builder/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.31.8",
+    "@clerk/clerk-react": "^5.33.0",
     "@google/genai": "^1.4.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -23,6 +23,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.511.0",
     "mime": "^4.0.7",
     "next-themes": "^0.4.6",
